--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -26,12 +26,13 @@ Rosettiness is strongly correlated to the final number of CCs deposited (\@ref(f
 ## Hair Cells
 
 Deposition of the first CC is more independent of Shroom3 (\@ref(fig:llpos)) than the remaining CCs and the mean positions indicate that deposition does not happen more randomly, but at a higher frequency. Interestingly during the first four hours, when the first CC is deposited, analysis of hair-cell specification shows that not only the promotor for _atoh1a_ is more active (results, figure 5.2 A and B) in _shroom3_$--$ embryos, but also that more cells are differentiating to become hair-cells (\@ref(fig:hctl)C and C’). This leads to the conclusion that the morphological changes introduced by the _shroom3_ mutation lead to a pre-mature activation of the _shroom3_ promotor, subsequently leading to deposition of the CC the hair-cell is associated with. 
-In the pLLP, Notch signaling is important for selection and specification of hair-cells (\@ref(intro-notch)). Interestingly, these findings are supported by another study where they have shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 (Kozlovskaja-Gumbrienė et al., 2017). For our observation this could mean that (1) either expression of atoh1a is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been well studied (Shaya et al., 2017). For the latter, the proposed model would be that in each micro-rosette the hair-cell is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of atoh1a and ultimately to CC deposition. 
+In the pLLP, Notch signaling is important for selection and specification of hair-cells (\@ref(intro-notch)). Interestingly, these findings are supported by another study where they have shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 [@Kozlovskaja-Gumbriene2017]. For our observation this could mean that (1) either expression of _atoh1a_ is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been well studied [@Shaya2017a]. For the latter, the proposed model would be that in each micro-rosette the hair-cell is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of _atoh1a_ and ultimately to earlier CC deposition. 
 
 ## Apical Constriction
 
-The method developed to quantify AC allows measurement along two orthogonal axes, the major (the longer axis) and a minor (the shorter axis), of an ellipse fitted to a cellular cross-section at a distinct distance from the apical site. In addition, the cells orientation in degrees from the horizontal midline is obtained (\@ref(fig:acaci)A-A’). 
-In summary, AC is significantly reduced in _shroom3_$--$ embryos for the severe phenotype. In more detail the results show an increased axial an-isotropy, meaning that AC is more reduced along the major than along the minor axis. In conclusion this means that AC and probably tension is more relaxed along the anterior-posterior axis. In terms of cell shape this means that rosette cells go from a pyramidal geometry, more to a prism geometry (\@ref(fig:sumcells)). This is also confirmed by angular measurement which shows that for 0-15$^\circ$ more _shroom3_$--$ pLLPs cells are aggregated while at 30-45$^\circ$, more _shroom3_++ cells are aggregated.
+The method developed to quantify AC allows measurement along two orthogonal axes, the major (the longer axis) and a minor (the shorter axis), of an ellipse fitted to a cellular cross-section at a distinct distance from the apical site. In addition, the cells orientation in degrees from the horizontal midline is obtained (\@ref(fig:acaci)A-A’).
+
+In summary, AC is significantly reduced in _shroom3_$--$ embryos for the severe phenotype. In more detail the results show an increased axial an-isotropy, meaning that AC is more reduced along the major than along the minor axis. In conclusion this means that AC and probably tension is more relaxed along the anterior-posterior axis. In terms of cell shape this means that rosette cells go from a pyramidal geometry, more to a prism geometry (\@ref(fig:sumcells)). This is also confirmed by angular measurement which show that for 0-15$^\circ$ more _shroom3_$--$ pLLPs cells are aggregated while at 30-45$^\circ$, more _shroom3_++ cells are aggregated.
 
 (ref:sumcells) Rosette and Cell Shape Model
 
@@ -39,11 +40,11 @@ In summary, AC is significantly reduced in _shroom3_$--$ embryos for the severe 
 knitr::include_graphics("figures/summary/cell-model.png")
 ```
 
-Zona occludens-1 (ZO-1) is a peripheral membrane, tight-junction associated protein. Within the apical region of pLLP rosettes Fgf filled luminal structures are developing that that are hubs for locally confined morphogen signaling. All cells of a rosette make up and are connected to a single lumen. When visualizing the lumen via an antibody for ZO-1, the lumen appears like a buckyball where each side is the connection to a single cell (Durdu et al., 2014). While in _shroom3_++ rosettes those structures appear circular in the trailing rosette, in _shroom3_$--$ rosettes they appear more oval (supplement, (\@ref(fig:suppzo1)), which supports the theory of an-isotropy. Furthermore, in more leading regions the signal is more fragmented, which supports the theory of micro-rosette structures.
+Zona occludens-1 (ZO-1) is a peripheral membrane, tight-junction associated protein. Within the apical region of pLLP rosettes Fgf filled luminal structures are developing that that are hubs for locally confined morphogen signaling. All cells of a rosette make up and are connected to a single lumen. When visualizing the lumen via an antibody for ZO-1, the lumen appears like a buckyball where each side is the connection to a single cell [@Durdu2014a]. While in _shroom3_++ rosettes those structures appear circular in the trailing rosette, in _shroom3_$--$ rosettes they appear more oval (supplement, (\@ref(fig:suppzo1)), which supports the theory of an-isotropy. Furthermore, in more leading regions the signal is more fragmented, which supports the theory of micro-rosette structures.
 
 ## Model
 
-Based on these results - In contrast to the current model - the _shroom3_$--$ phenotype is not defined by an absence of rosettes but by a greater than or equal to count and smaller rosettes with less weight. Those ‘micro-rosettes’ will eventually be deposited, leading to somewhat smaller CCs, which is also supported by analysis of emerging hair cells in the pLLP. The results are summarized and graphically modeled in figure 2.
+Based on these results - In contrast to the current model - the _shroom3_$--$ phenotype is not defined by an absence of rosettes but by a greater than or equal to amount that are smaller and have less weight. Those ‘micro-rosettes’ will eventually be deposited, leading to somewhat smaller CCs, which is also supported by analysis of emerging hair cells in the pLLP. The results are summarized and graphically modeled in figure 2.
 
 (ref:summodel) Shroom3 dependent rosette formation
 
@@ -58,19 +59,23 @@ To create a robust model, it is necessary to have robust methods that allow to g
 
 ## Proliferation
 
-For proliferation no difference in the mitotic rate could be detected in the pLLP which lead to the conclusion that additional CC deposition was independent. However, previous reports have shown a bias in location and direction of mitoses in the pLLP (Laguerre et al., 2005; Laguerre et al., 2009). Since our model supposed that rosette cells are more oriented along the horizontal midline this could mean that even though there are not more mitoses overall, mitotic axis is also directed more along A-P. This in turn would result in more cells along this direction, decreasing tension, leading to pre-mature deposition.
+For proliferation no difference in the mitotic rate could be detected in the pLLP which lead to the conclusion that additional CC deposition was independent. However, previous reports have shown a bias in location and direction of mitoses in the pLLP [@Laguerre2009a; @Laguerre2005a]. Since our model supposed that rosette cells are more oriented along the horizontal midline this could mean that even though there are not more mitoses overall, the mitotic axis is also directed more along A-P. This in turn would result in more cells along this direction, potentially decreasing tension, leading to pre-mature deposition.
 
 ## Rosette Detection
 
-Deep learning methods are currently, driven by the hype of artificial intelligence, extremely _en vogue_. While their use is not always justified, especially for biomedial image analysis they have proven extremely powerful (Ching et al., 2018; Falk et al., 2019; Webb, 2018). With the used fluorescent membrane label epithelial rosettes are relatively simple to detect, even with traditional image processing techniques. The arguably biggest point for criticism is that one usually does not know the features the network has learned to detect. An important metric, besides the plain detection, is the softmax-score^[Also detection score, the final result of all weights of the NN]. It is a metric that tells about the security of the network how safe it is in its prediction. We interpreted this score in a way that lower prediction scores are representative for ‘weaker’ rosettes. 
+Deep learning methods are currently, driven by the hype of artificial intelligence, extremely _en vogue_. While their use is not always justified, especially for biomedial image analysis they have proven extremely powerful [@Ching2018; @Falk2019; @Webb2018]. 
+
+With the used fluorescent membrane label epithelial rosettes are relatively simple to detect, even with traditional image processing techniques. The arguably biggest point for criticism is that one usually does not know the features the network has learned to detect. An important metric, besides the plain detection, is the softmax-score^[Also: "detection score", the final result of all weights of the NN]. It is a metric that tells about the security of the network how safe it is in its prediction. We interpreted this score in a way that lower prediction scores are representative for ‘weaker’ rosettes.
 
 ## Hair Cell specification
 
-Even though the dataset for hair-cell specification provided a lot of datapoints for statistical testing, the difference for cell counts show only a relatively low significance. This could be attributed to the large variance in measurements. On the other side, not only is there a significant increase in cell count in _shroom3_$--$ pLLPs but also a higher activity of the _atoh1a_ promotor. When controlling these results by trying to rescue the _shroom3_$--$ with a _atoh1a_ knockdown, neither in _shroom3_$--$ nor in _shroom3_++ embryos the first NM is deposited anymore. Both of these results would in theory argue for an Atoh1a dependent mechanism of CC deposition, however this result has not been reported before and would need further research. Furthermore, even though an MO for p53 was co-injected, MO injection has been shown to potentially have many more unspecific effects due to the high concentrations usually injected (Schulte-Merker and Stainier, 2014). For this reason double mutants (_shroom3_$--$; _atoh1a_$--$) were generated which at this timepoints however are not analyzed yet.
+Even though the dataset for hair-cell specification provided a lot of datapoints for statistical testing, the difference for cell counts show only a relatively low significance. This could be attributed to the large variance in measurements. On the other side, not only is there a significant increase in cell count in _shroom3_$--$ pLLPs but also a higher activity of the _atoh1a_ promotor. 
+
+When controlling these results by trying to rescue the _shroom3_$--$ with a _atoh1a_ knockdown, neither in _shroom3_$--$ nor in _shroom3_++ embryos the first NM is deposited anymore. Both of these results would in theory argue for an Atoh1a dependent mechanism of CC deposition, however this result has not been reported before and would need further validation. Furthermore, even though an MO for p53 was co-injected, MO injection has been shown to potentially have many more unspecific effects due to the high concentrations usually injected [@Schulte-Merker2014c]. For this reason double mutants ( _shroom3_$--$; _atoh1a_$--$) were generated - which at this timepoints however are not analyzed yet.
 
 ## Single cell reconstruction and AC measurement
 
-Earlier attempts for indexing AC include measuring the ‘apical index’ (A.I.) of bottle cells during _X.laevis_ gastrulation (Lee and Harland, 2007) or the ACI for cells of the pLLP (Harding and Nechiporuk, 2012). For both, the metric describes the ratio of lateral height over apical width, which depending on the situation, is a very coarse and inaccurate description. In the pLLP cells of different forms, volumes and heights can be found. When measuring apical width at a fix distance from the apical site cells with different height but otherwise equal degree of AC turns out to have a very different ACI (figure 3 A and A’). If however apical width is measured at a distance relative to the cells height, cells turn out to have the same ACI (figure 3 A and A’’). In addition, it remains questionable exactly how to define _apical width_ in a two-dimensional cellular cross-section. The improved model for AC and method for automated and unbiased cellular segmentation therefore represents a major advancement.
+Earlier attempts for indexing AC include measuring the ‘apical index’ (A.I.) of bottle cells during _X.laevis_ gastrulation [@Lee2007a] or the ACI for cells of the pLLP [@Harding2012]. For both, the metric describes the ratio of lateral height over apical width which, depending on the situation, is a very coarse and inaccurate description. In the pLLP cells of different forms, volumes and heights can be found. When measuring apical width at a fix distance from the apical site cells with different height but otherwise equal degree of AC turn out to have a very different ACI (\@ref(fig:disaci)A and A’). If however apical width is measured at a distance relative to the cells height, cells turn out to have the same ACI (\@ref(fig:disaci)A and A’’). In addition, it remains questionable exactly how to define _apical width_ in a two-dimensional cellular cross-section. By introducing apical width measurement along both, the major and the minor axis (section \@ref(ACI-pol)), the improved model for AC and method for automated and unbiased cellular segmentation therefore represents a major advancement.
 
 (ref:disaci) ACI model **A-A’’** ACI Cell Models. A’ and A’’ show cells that are symmetrically increased versions of A. While in A’, constant delta was used, in A’’ delta was adjusted relative to the lateral height. **B** Illustrating delta ap. (left) apically constricted cells volume rendered in XY (top) and as a lateral cross-section in X-Z (bottom). (right) 2D area as seen at delta ap of 1 or 2.5 $\mu$m.
 
@@ -78,7 +83,7 @@ Earlier attempts for indexing AC include measuring the ‘apical index’ (A.I.)
 knitr::include_graphics("figures/summary/aci_fig-01.png")
 ```
 
-AC also is correlated with cell height. To get a more detailed impression about how variables are distributed within the cells of the pLLP, single cell measurements of pLLPs that are normalized in orientation can be superimposed in a two-dimensional map of organ length and width. Next, cell coordinates in this map can be grouped into bins of hexagons and the summary statistic represented as color on a continuous scale (figure 4. Doing so reveals that for stages 32 and 36 hpf height in _shroom3_$--$ cells is not as strongly reduced as in SU5402 treated ones and, as expected, that cells in the central region of the pLLP are higher than in the leading, trailing and lateral regions. In this this specific case this may not lead to new insights, but it improves the visual perception and therefore may assist more concise questioning and reasoning.
+AC is also correlated with cell height. To get a more detailed impression about how variables are distributed within the cells of the pLLP, single cell measurements of pLLPs that are normalized in orientation can be superimposed in a two-dimensional map of organ length and width. Next, cell coordinates in this map can be grouped into bins of hexagons and the summary statistic represented as color on a continuous scale (\@ref(fig:dismap)). Doing so reveals that for stages 32 and 36 hpf, height in _shroom3_$--$ cells is not as strongly reduced as in SU5402 treated ones and that cells in the central region of the pLLP are higher than in the leading, trailing and lateral regions. In this specific case this may not lead to new insights, but it improves the visual perception and therefore may assist more concise questioning and reasoning.
 
 (ref:dismap) pLLP Maps
 
@@ -86,12 +91,12 @@ AC also is correlated with cell height. To get a more detailed impression about 
 knitr::include_graphics("figures/summary/methodology_mapr.png")
 ```
 
-In addition to visualization, large multidimensional datasets offer the possibility for advanced computational methods such as Machine and Deep learning. For example, one could use clustering methods such as Principal Component Analysis (PCA) to find out which dimensions contribute the most to separate a number of clusters from each other (figure 5). Another scenario would be to manually label cells of a dataset as either leading, trailing, rosette, lateral, ... etc. to train an ML model on. The model could then be used on unlabeled data to assign the previous learned labels to cells that fit the right parameters.
+In addition to visualization, large multidimensional datasets offer the possibility for advanced computational methods such as Machine- and Deep learning. For example, one could use clustering methods such as Principal Component Analysis to find out which dimensions contribute the most to separate a number of clusters from each other (\@ref(fig:dispca)). Another scenario would be to manually label cells of a dataset as either leading, trailing, rosette, lateral, ... etc. to train an Machine learning model on. The model could then be used on unlabeled data to assign the previous learned labels to cells that fit the right parameters.
 
-(ref:dispca) Principal Component Analysis
+(ref:dispca) Principal Component Analysis (A) (B)
 
 ```{r dispca, out.width = "0.95\\textwidth", fig.cap="(ref:dispca)", fig.scap="Principal Component Analysis"}
 knitr::include_graphics("figures/summary/pca_fig.png")
 ```
 
-Yet another application example would be to use the ground truth image data to train a CNN with that potentially would be more robust and easier to use as it wouldn’t require as much pre-processing.
+Yet another application example would be to use the ground truth image data generated for my studies to train a CNN that potentially would be more robust to data of different quality / resolution and easier to use as it wouldn’t require as much pre-processing.
