--- a/template.tex
+++ b/template.tex
@@ -31,6 +31,7 @@
 % Check out CTAN to see: http://www.ctan.org/
 %%
 \usepackage{graphicx,latexsym}
+\usepackage{lastpage}
 \usepackage{amsmath}
 \usepackage{amssymb,amsthm}
 \usepackage{longtable,booktabs,setspace}
@@ -158,7 +159,7 @@ $if(acknowledgements)$
   \begin{acknowledgements}
     $acknowledgements$
 \begin{center}
-\includegraphics[width=0.6\textwidth]{figure/05-Appendix/DSC07341.png}
+\includegraphics[width=0.5\textwidth]{figure/05-Appendix/DSC07341.png}
 \end{center}
   \end{acknowledgements}
 $endif$
